main/openvpn: fix ebegin call in initscript

--- a/main/openvpn/APKBUILD
+++ b/main/openvpn/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=openvpn
 pkgver=2.4.8
-pkgrel=2
+pkgrel=3
 pkgdesc="A robust, and highly configurable VPN (Virtual Private Network)"
 url="https://openvpn.net/"
 arch="all"
@@ -11,16 +11,14 @@ subpackages="$pkgname-doc $pkgname-dev $pkgname-openrc $pkgname-auth-pam:pam"
 depends="iproute2"
 makedepends="openssl-dev lzo-dev linux-pam-dev linux-headers"
 install="$pkgname.pre-install"
-source="https://swupdate.openvpn.net/community/releases/$pkgname-$pkgver.tar.xz
+source="https://swupdate.openvpn.net/community/releases/openvpn-$pkgver.tar.xz
 	openvpn.initd
 	openvpn.confd
 	openvpn.up
 	openvpn.down
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -33,12 +31,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	# install samples
@@ -63,7 +59,7 @@ pam() {
 }
 
 sha512sums="d37a768c7f8683c23ae0d73d7e9947b5a1dac26580b0d7fe72454319acfe40375fbe150e68daee865a78e0269740e4ac5c96cdb8a7f02a1287ea93752ee0be06  openvpn-2.4.8.tar.xz
-382cc9d938cf4ddbf1d32b7f08889a3f7ff20cbf79a5e4bedd87402c094bfce92e28761b109e9a069cc57c9eb8b586b81b94eced097c694ddf3728a5cc31000c  openvpn.initd
+d05497d3e283119bf0c53a786ab85098c3b5e4661b90e1cb08e358fce77842b947b6ae861e7ca8e1421413d59ecd939df99e600cce6047b2eab1061f5f87319e  openvpn.initd
 1f14d4bd7a4a026c276af048ce647501c15358c6b0d184e95c49be5b8184188c8edafb76ed94835cdbb314187ee3b5b3ccd852e3a47add0599814c402309bece  openvpn.confd
 cdb73c9a5b1eb56e9cbd29955d94297ce5a87079419cd626d6a0b6680d88cbf310735a53f794886df02030b687eaea553c7c569a8ea1282a149441add1c65760  openvpn.up
 4456880d5c2db061219ba94e4052786700efa5e685f03b0d12d75a6023e3c0fc7b5242cc3d2bd3988e42fcd99701ab13a6257b1a0943b812318d30c64843ad27  openvpn.down"
