main/openldap: fix ebegin call in initscript

--- a/main/openldap/APKBUILD
+++ b/main/openldap/APKBUILD
@@ -3,17 +3,17 @@
 #
 # secfixes:
 #   2.4.48-r0:
-#   - CVE-2019-13565
-#   - CVE-2019-13057
+#     - CVE-2019-13565
+#     - CVE-2019-13057
 #   2.4.46-r0:
-#   - CVE-2017-14159
-#   - CVE-2017-17740
+#     - CVE-2017-14159
+#     - CVE-2017-17740
 #   2.4.44-r5:
-#   - CVE-2017-9287
+#     - CVE-2017-9287
 #
 pkgname=openldap
 pkgver=2.4.49
-pkgrel=1
+pkgrel=2
 pkgdesc="LDAP Server"
 url="http://www.openldap.org/"
 arch="all"
@@ -45,7 +45,7 @@ subpackages="
 	$pkgname-openrc
 	"
 install="$pkgname.pre-install $pkgname.post-install $pkgname.post-upgrade"
-source="https://www.openldap.org/software/download/OpenLDAP/$pkgname-release/$pkgname-$pkgver.tgz
+source="https://www.openldap.org/software/download/OpenLDAP/openldap-release/openldap-$pkgver.tgz
 	openldap-2.4-ppolicy.patch
 	openldap-2.4.11-libldap_r.patch
 	openldap-mqtt-overlay.patch
@@ -77,7 +77,6 @@ do
 done
 
 prepare() {
-	cd "$builddir"
 	update_config_sub
 	default_prepare
 
@@ -86,8 +85,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
-
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -144,8 +141,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
-
 	make DESTDIR="$pkgdir" install
 
 	# Install MQTT overlay.
@@ -278,5 +273,5 @@ sha512sums="99d1943d126b06e62865e31e5825fcff2cb15415f7f85ae4962fa0e7425bc3b58db5
 8c4244d316a05870dd1147b2ab7ddbcfd7626b5dce2f5a0e72f066dc635c2edb4f1ea3be88c6fec2d5ab016001be16bedef70f2ce0695c3cd96f69e1614ff177  fix-manpages.patch
 fd1c1ba368148d42c24071a8a8f668232347f4c48268cd189b6be4a48bb51fc11e8c29074e70db69e1a2c249210bc7d4b4d55a0712e5e97a9df04cc8f743fa70  configs.patch
 60c1ec62003a33036de68402544e25a71715ed124a3139056a94ed1ba02fb8148ee510ab8f182a308105a2f744b9787e67112bcd8cd0d800cdb6f5409c4f63ff  cacheflush.patch
-0c3606e4dad1b32f1c4b62f2bc1990a4c9f7ccd10c7b50e623309ba9df98064e68fc42a7242450f32fb6e5fa2203609d3d069871b5ae994cd4b227a078c93532  slapd.initd
+2d286ff7cc56153204f3ab79c464d083801a40cc9bbb0b5cc1fb19de63d6e81c953b1ab0edd256d9ba48144bbda9a0c0d628bfec1342129aa2727344dea5fa9e  slapd.initd
 64dc4c0aa0abe3d9f7d2aef25fe4c8e23c53df2421067947ac4d096c9e942b26356cb8577ebc41b52d88d0b0a03b2a3e435fe86242671f9b36555a5f82ee0e3a  slapd.confd"
