--- a/main/hylafax/APKBUILD
+++ b/main/hylafax/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Cameron Banta <cbanta@gmail.com>
 pkgname=hylafax
 pkgver=6.0.7
-pkgrel=2
+pkgrel=3
 pkgdesc="Sends and receives faxes"
 url="http://www.hylafax.org/"
 arch="all"
@@ -11,12 +11,11 @@ license="MIT"
 depends="ghostscript bash tiff-tools"
 makedepends="zlib-dev tiff-dev<4.2 gettext-dev"
 subpackages="$pkgname-doc $pkgname-lang"
-source="ftp://ftp.hylafax.org/source/$pkgname-$pkgver.tar.gz
+source="ftp://ftp.hylafax.org/source/hylafax-$pkgver.tar.gz
 	$pkgname.initd
 	$pkgname.confd
 	hylafax-charset.patch
 	libtiff-41-compatibility.patch"
-builddir="$srcdir"/$pkgname-$pkgver
 
 # secfixes:
 #   6.0.6-r5:
@@ -28,7 +27,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	# the configure script does not handle ccache or distcc
 	export CC=gcc
 	export CXX=g++
@@ -56,30 +54,29 @@ build() {
 	make
 }
 
-package(){
-	cd "$builddir"
+package() {
 	# this makefile has issues installing, it doesn't use the standard
 	#   install - but the following seems to work
-	mkdir -p "${pkgdir}"/usr/bin "${pkgdir}"/usr/sbin
-	mkdir -p "${pkgdir}"/usr/lib/"$pkgname" "${pkgdir}"/usr/share/man
-	mkdir -p "${pkgdir}"/usr/share/locale/$pkgname
-	mkdir -p "${pkgdir}"/var/spool/"$pkgname"
-	mkdir -p "${pkgdir}"/var/spool/"$pkgname"/lib
-	touch "${pkgdir}"/var/spool/"$pkgname"/lib/pagesizes
-	chown uucp:uucp "${pkgdir}"/var/spool/"$pkgname"
-	chmod 0600 "${pkgdir}"/var/spool/"$pkgname"
+	mkdir -p "$pkgdir"/usr/bin "$pkgdir"/usr/sbin
+	mkdir -p "$pkgdir"/usr/lib/"$pkgname" "$pkgdir"/usr/share/man
+	mkdir -p "$pkgdir"/usr/share/locale/$pkgname
+	mkdir -p "$pkgdir"/var/spool/"$pkgname"
+	mkdir -p "$pkgdir"/var/spool/"$pkgname"/lib
+	touch "$pkgdir"/var/spool/"$pkgname"/lib/pagesizes
+	chown uucp:uucp "$pkgdir"/var/spool/"$pkgname"
+	chmod 0600 "$pkgdir"/var/spool/"$pkgname"
 
 	make \
-		BIN="${pkgdir}/usr/bin" \
-		SBIN="${pkgdir}/usr/sbin" \
-		LIBDIR="${pkgdir}/usr/lib" \
-		LIB="${pkgdir}/usr/lib" \
-		LIBEXEC="${pkgdir}/usr/sbin" \
-		LIBDATA="${pkgdir}/var/spool/$pkgname"/lib \
-		MAN="${pkgdir}/usr/share/man" \
-		LOCALEDIR="${pkgdir}/usr/share/locale/$pkgname" \
-		SPOOL="${pkgdir}/var/spool/$pkgname" \
-		HTMLDIR="${pkgdir}/usr/share/doc/$pkgname/html" \
+		BIN="$pkgdir/usr/bin" \
+		SBIN="$pkgdir/usr/sbin" \
+		LIBDIR="$pkgdir/usr/lib" \
+		LIB="$pkgdir/usr/lib" \
+		LIBEXEC="$pkgdir/usr/sbin" \
+		LIBDATA="$pkgdir/var/spool/$pkgname"/lib \
+		MAN="$pkgdir/usr/share/man" \
+		LOCALEDIR="$pkgdir/usr/share/locale/$pkgname" \
+		SPOOL="$pkgdir/var/spool/$pkgname" \
+		HTMLDIR="$pkgdir/usr/share/doc/$pkgname/html" \
 		install
 
 	install -m644 -D "$srcdir/$pkgname-$pkgver/COPYRIGHT" \
@@ -87,15 +84,14 @@ package(){
 	install -m644 -D "$srcdir/$pkgname-$pkgver/README" \
 		"$pkgdir"/usr/share/doc/$pkgname/README
 
-        install -D -m755 "$srcdir"/$pkgname.initd \
-                "$pkgdir"/etc/init.d/$pkgname
-        install -D -m644 "$srcdir"/$pkgname.confd \
-                "$pkgdir"/etc/conf.d/$pkgname
-
+	install -D -m755 "$srcdir"/$pkgname.initd \
+		"$pkgdir"/etc/init.d/$pkgname
+	install -D -m644 "$srcdir"/$pkgname.confd \
+		"$pkgdir"/etc/conf.d/$pkgname
 }
 
 sha512sums="fc57feb416772a7a4bfaf5c3c76a0c2254ead2f63a72b3dfa465444327d440345a0402b7c7dad14f6d03029302ef39cf160c8ef5bfdee2c966fd15fbaac230a3  hylafax-6.0.7.tar.gz
-3862cefcd26092000e4489c097537e5e0e2ae1f7c2a7a16b1e933b3bb78d136b6d8a65fb712ae245dd8ca881900408d0d9788bd2e0b859a9569fc6f4ede8cc7c  hylafax.initd
+012e204ee7f86804c8cb249f6c53452b7a36b7140aa4d8f61c5c63cfe1fdfb84c42be46b1e39ca37766d9fcb209db7d96a32a01108d1e66a8f7df28e72167ce0  hylafax.initd
 3c07726cc9d7351dceb80a46354c6626e54b033b0f434c1db01db2a3b3ab5e9084d551dd23cae3ab40806f27aa5fa0a5b70c43a6b7802356871c0b343baa2376  hylafax.confd
 f97c805a62dfcb57f85f614b6eb28bd6b58e0582ce4f9aa5166337a46d453ea038a098223d879d120f51454008a5e8ed2fa60ba6e8be12af7b7d5a4927c51471  hylafax-charset.patch
 ba4c2724e81e156fb603f22dc80fb25399d8661e1a2c176371d5ee36647e8c3710a3dfa3be97340aaba8631d8cee6c31c71829bd824cd6c4cd6239d947df0fcf  libtiff-41-compatibility.patch"
