testing/py3-pygpgme: modernize

--- a/testing/py3-pygpgme/APKBUILD
+++ b/testing/py3-pygpgme/APKBUILD
@@ -3,24 +3,21 @@
 pkgname=py3-pygpgme
 _pkgname=pygpgme
 pkgver=0.3.1
-pkgrel=2
+pkgrel=3
 pkgdesc="PyGPGME is a Python module that lets you sign, verify, encrypt and decrypt messages using the OpenPGP format."
-url="https://launchpad.net/pygpgme"
+url="https://github.com/rshk/pygpgme/"
 arch="all"
-license="LGPL-2.1"
-depends="python3 gpgme"
-makedepends="python3-dev gpgme-dev"
-subpackages=""
-source="$_pkgname-${pkgver}.tar.gz::https://github.com/rshk/$_pkgname/archive/v$pkgver.tar.gz"
+license="LGPL-2.1-or-later"
+depends="python3"
+makedepends="gpgme-dev python3-dev"
+source="$_pkgname-$pkgver.tar.gz::https://github.com/rshk/pygpgme/archive/v$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
 build() {
-	cd "$builddir"
 	python3 setup.py build
 }
 
 package() {
-	cd "$builddir"
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
