--- a/community/gpgme/APKBUILD
+++ b/community/gpgme/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gpgme
 pkgver=1.13.1
-pkgrel=1
+pkgrel=2
 pkgdesc="gnupg made easy"
 url="https://www.gnupg.org/related_software/gpgme/"
 arch="all"
@@ -10,9 +10,8 @@ license="LGPL-2.1-or-later GPL-3.0-or-later"
 depends="gnupg"
 depends_dev="qt5-qtbase-dev"
 makedepends="$depends_dev python3-dev py3-setuptools swig libgpg-error-dev libassuan-dev"
-subpackages="$pkgname-dev $pkgname-doc gpgmepp py3-gpgme:py3 q$pkgname"
-source="https://www.gnupg.org/ftp/gcrypt/$pkgname/$pkgname-$pkgver.tar.bz2
-	"
+subpackages="$pkgname-dev $pkgname-doc gpgmepp py3-gpgme:py3 q$pkgname $pkgname-lisp:lisp:noarch"
+source="https://www.gnupg.org/ftp/gcrypt/gpgme/gpgme-$pkgver.tar.bz2"
 
 build() {
 	./configure \
@@ -23,7 +22,7 @@ build() {
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
 		--localstatedir=/var \
-		--enable-languages="cl cpp qt python"
+		--enable-languages="cl cpp python qt"
 	make
 }
 
@@ -33,6 +32,11 @@ package() {
 
 check() {
 	make check
+}
+
+lisp() {
+	mkdir -p "$subpkgdir"/usr/
+	mv "$pkgdir"/usr/share "$subpkgdir"/usr/share/
 }
 
 gpgmepp() {
