--- a/community/knot-resolver/APKBUILD
+++ b/community/knot-resolver/APKBUILD
@@ -2,17 +2,17 @@
 # Contributor: tcely <knot-resolver+aports@tcely.33mail.com>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=knot-resolver
-pkgver=4.3.0
-pkgrel=4
+pkgver=5.0.1
+pkgrel=0
 pkgdesc="Minimalistic caching DNS resolver implementation"
 url="https://www.knot-resolver.cz/"
 arch="all !s390x"  # limited by luajit
 license="GPL-3.0"
 pkgusers="kresd"
 pkggroups="kresd"
-depends="dns-root-hints dnssec-root lua5.1-sec lua5.1-socket"
+depends="dns-root-hints dnssec-root lua5.1-cqueues lua5.1-http"
 _depends_dnstap="$pkgname=$pkgver-r$pkgrel"
-_depends_http="$pkgname=$pkgver-r$pkgrel lua5.1-cqueues lua5.1-http lua5.1-mmdb"
+_depends_http="$pkgname=$pkgver-r$pkgrel lua5.1-mmdb"
 _depends_dnstap_dev="fstrm-dev protobuf-dev protobuf-c-dev"
 depends_dev="
 	knot-dev>=2.8.0
@@ -21,7 +21,7 @@ depends_dev="
 	luajit-dev>=2.0
 	$_depends_dnstap_dev
 	"
-depends_static="$pkgname-dev"
+depends_static="$pkgname-dev=$pkgver-r$pkgrel"
 makedepends="
 	$depends_dev
 	bash
@@ -94,6 +94,10 @@ package() {
 
 	cd "$pkgdir"
 
+	# These are useless on non-systemd distro.
+	rm ./usr/lib/knot-resolver/distro-preconfig.lua
+	rm ./usr/lib/knot-resolver/upgrade-4-to-5.lua
+
 	install -m 755 -D "$srcdir"/$pkgname.initd ./etc/init.d/$pkgname
 	install -m 644 -D "$srcdir"/$pkgname.confd ./etc/conf.d/$pkgname
 	install -m 755 -D "$srcdir"/kres-cache-gc.initd ./etc/init.d/kres-cache-gc
@@ -130,9 +134,9 @@ gpgfingerprints="
 	B600 6460 B60A 80E7 8206  2449 E747 DF1F 9575 A3AA
 	"
 
-sha512sums="cb59b8bd3d12feeba0fbf45e021c8cd7736393377aa6c71d2d365d0ebb58122c440df3187ed4d3396dacfa5aba4bb752826b9d9da02aea4b626fcba3767c7c47  knot-resolver-4.3.0.tar.xz
+sha512sums="9d5d77d3aff082d5f0132b39627fff5cd7af6e237ded219b7b8f2156de7acacb3bf94d5e278af4bb2c9e36ea80d9259d39ba33a18bb37a626a57c70fb9dc0931  knot-resolver-5.0.1.tar.xz
 688aeacb0c1f21c7e532533b402e67068897217713fb668636df7533000b493981ddfa0497f8dba7da7c804ee4ab8d587a4f52155b4e2bf1f4025d2588d314bb  knot-resolver.logrotate
 653bf15f07047ec72913f571bc283c76adc6bc5444c1d01524ec79fc891ec7e4022bee267ef8e83f03fd8dbccb6d5e73530acfd3987cb5571cab4c402741d189  knot-resolver.confd
-6177a1a1141c5f57f5eca119afec85ed656b26f08d3da4786663c3a5f3074622e4af684df202ce8a863141d0b2008f91d8d0db53da9a616cfdcd5e2ae0fa9b5f  knot-resolver.initd
+79e1a7c003e13fecad5b68935c23554c735fee65fde93a4460c0562486af0656bac01c624cabdcd12e6f41c7b6414c2724a59f7447ddb7aa583d46df5814081e  knot-resolver.initd
 569cbe40de039b86ffc55a1633029517cda8bd26fc4e3b267796160c40b0647c2abc0eab8090e95659ce3c143f73e2c997f5c10d5b0f47c73079d622b211d3d7  kres-cache-gc.initd
 be54a2b1e6031262f8aeed050a6e31fe8fea8c937fa5bc0c3b3ff67c7577fa8ba2bfd5a711f6499eb0668522b0b268c707a9fa0035292d0f9c040b96587ffcaf  kres-cache-gc.confd"
