--- a/testing/wine-mono/APKBUILD
+++ b/testing/wine-mono/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Ivan Tham <pickfire@riseup.net>
 pkgname=wine-mono
-pkgver=4.7.0
-pkgrel=1
+pkgver=4.9.4
+pkgrel=0
 pkgdesc="Wine's built-in replacement for Microsoft's .NET"
 url="https://wiki.winehq.org/Mono"
 arch="x86_64"
 license="MIT"
 depends="wine"
 options="!check"
-source="https://dl.winehq.org/wine/$pkgname/$pkgver/$pkgname-$pkgver.msi"
+source="https://dl.winehq.org/wine/wine-mono/$pkgver/wine-mono-$pkgver.msi"
 
 build() {
 	return 0
@@ -20,4 +20,4 @@ package() {
 		"$pkgdir"/usr/share/wine/mono/$pkgname-$pkgver.msi
 }
 
-sha512sums="07cd2b26f3bfe6fc796a126b83e9c0aa655d3e8152af536ae2e8ae419013742706ddae6f93cc2341c94a2f3b8ae7d1b27d12f891d371928189291428f9ed877c  wine-mono-4.7.0.msi"
+sha512sums="d52a2cc1137eac87acdaecbb7a81b3d618cad9ad3d7bca5b29940b7432923bfc1497ec21501a05797ef52c6588bb9c5e312df5c02ede8448d1fe1f2880557fc9  wine-mono-4.9.4.msi"
