testing/oq: upgrade to 1.0.1

--- a/testing/oq/APKBUILD
+++ b/testing/oq/APKBUILD
@@ -1,12 +1,10 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=oq
-pkgver=0.2.1
+pkgver=1.0.1
 pkgrel=0
 pkgdesc="A portable jq wrapper with support of other formats than JSON"
 url="https://github.com/blacksmoke16/oq"
-# arch="x86_64 aarch64"  # limited by Crystal
-# `gcc "${@}" -o '/home/buildozer/aports/testing/oq/src/oq-0.2.1/bin/oq'  -rdynamic  -lyaml -lxml2 -lpcre -lm /usr/lib/libgc.a -lpthread /usr/lib/crystal/core/ext/libcrystal.a -levent -lrt -L/usr/lib -L/usr/local/lib`
 arch="x86_64 aarch64"  # limited by Crystal
 license="MIT"
 depends="jq"
@@ -15,7 +13,7 @@ source="https://github.com/Blacksmoke16/oq/archive/v$pkgver/$pkgname-$pkgver.tar
 builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	mkdir bin
+	mkdir -p bin
 	crystal build --release -o bin/oq src/oq_cli.cr
 }
 
@@ -27,4 +25,4 @@ package() {
 	install -D -m 755 bin/oq "$pkgdir"/usr/bin/oq
 }
 
-sha512sums="0b88d593d509bbfb525adba8c85b8534d507d46d23044f5ba5a7adab64cda87d26f40c004518f10aca6f549e90a115a04c8d83f6a71d5e4ea2a4313e7e6f5552  oq-0.2.1.tar.gz"
+sha512sums="499a0e44e03f34ec523e5b6d34d76c4ce03aac744de6b1429c6ae951e319b9cd9b8fa1fbeb5bfd993d24c33d5140ba2f99fd94fd5d6399de445f65db4d563838  oq-1.0.1.tar.gz"
