--- a/community/claws-mail/APKBUILD
+++ b/community/claws-mail/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Łukasz Jendrysik
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=claws-mail
-pkgver=3.17.4
-pkgrel=4
-pkgdesc="A GTK+ based e-mail client."
+pkgver=3.17.5
+pkgrel=0
+pkgdesc="GTK+ based e-mail client."
 url="https://www.claws-mail.org"
 arch="all"
 license="GPL-3.0-or-later"
@@ -188,5 +188,5 @@ _managesieve() {
 	_plugin "Manage Sieve filters on servers that support ManageSeieve" "" managesieve
 }
 
-sha512sums="ff7f1339888130443532945b49f40373ece6edc45554625fa89ceb1a52031d6d56174455167b35d301082e91019dc0aef0ae0f02b30924a0695cf155617f4e94  claws-mail-3.17.4.tar.gz
-258641c9bb4740d497db134ee21af650b74384b6766b7757c99738459ce0b24dcad970f6f7f816eb50ceb94a21eed0b3af17a008dfb49243c1a86cad2887c219  libetpan-1.9.4.patch"
+sha512sums="20495efd82a3c62752bd453fc7846efae644beeb6feb8cfdbd4211241e52222ed36a9cdb543ef04ed881cccffb601d376428a88fe119ebe6937350b20170f416  claws-mail-3.17.5.tar.gz
+02d2402d9f63547089d97d7f24b2952271018ed358004e2c740c8c5b3b0f5083d8c5b0bf3f9e77ebcdaabcefce6d096b2aa89969b862c107fdf7a0ff19184c3b  libetpan-1.9.4.patch"
