main/xcb-proto: upgrade to 1.14

--- a/main/xcb-proto/APKBUILD
+++ b/main/xcb-proto/APKBUILD
@@ -1,21 +1,16 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xcb-proto
-pkgver=1.13
-pkgrel=4
+pkgver=1.14
+pkgrel=0
 pkgdesc="XML-XCB protocol descriptions"
+options="!check" # no testsuite
 url="https://xcb.freedesktop.org"
 arch="noarch"
 license="MIT"
-depends=
 makedepends="python3"
-# no testsuite
-options="!check"
-source="https://xcb.freedesktop.org/dist/$pkgname-$pkgver.tar.bz2"
-
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://xorg.freedesktop.org/archive/individual/proto/xcb-proto-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -24,8 +19,7 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR=$pkgdir install
 }
 
-sha512sums="002aa2aa0ad503977e03419c6f136f1e3aa8c787916830ce6d6be8f81ca99edc1d8fc5f71ce8c592b490cc767bf6567695f0bafe55fe3f743076bcddbaac07f7  xcb-proto-1.13.tar.bz2"
+sha512sums="de66d568163b6da2be9d6c59984f3afa3acd119a781378638045fd68018665ef5c9af98f024e9962ba3eb7c7a4d85c27ba70ffafceb2324ccc6940f34de16690  xcb-proto-1.14.tar.xz"
