main/libxcb: upgrade to 1.14

--- a/main/libxcb/APKBUILD
+++ b/main/libxcb/APKBUILD
@@ -1,23 +1,19 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libxcb
-pkgver=1.13.1
+pkgver=1.14
 pkgrel=0
 pkgdesc="X11 client-side library"
 url="https://xcb.freedesktop.org"
 arch="all"
 license="MIT"
-depends=
 subpackages="$pkgname-dev $pkgname-doc"
 depends_dev="libxau-dev xcb-proto"
 checkdepends="check-dev"
 options="!check" # upstream requires an old check version (0.9.4)
 makedepends="$depends_dev libpthread-stubs libxdmcp-dev libxslt python3"
-source="https://xcb.freedesktop.org/dist/$pkgname-$pkgver.tar.bz2"
-
-builddir="$srcdir"/$pkgname-$pkgver
+source="https://xorg.freedesktop.org/archive/individual/lib/libxcb-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -29,13 +25,11 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
-sha512sums="763edff9572623674f75a858adc57b5c09591f508cc5d5093218e7bb047abdbe0a0108bd465419a8bf15c7dcdc85efdd2d4d9fd56605c41475d15dc992640c23  libxcb-1.13.1.tar.bz2"
+sha512sums="b90a23204b0d2c29d8b115577edb01df0465e02d6a8876550fecd62375d24a5d5f872ddd5946772ddba077cadce75b12c7a6d218469dc30b5b92bc82188e8bc6  libxcb-1.14.tar.xz"
