testing/py3-lark-parser: upgrade to 0.8.1

--- a/testing/py3-lark-parser/APKBUILD
+++ b/testing/py3-lark-parser/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Russ Webber <russ@rw.id.au>
 # Maintainer: Russ Webber <russ@rw.id.au>
-pkgname="py3-lark-parser"
-_pkgname="lark-parser"
-pkgver="0.7.8"
+pkgname=py3-lark-parser
+_pkgname=lark-parser
+pkgver=0.8.1
 pkgrel=0
 pkgdesc="A modern parsing library for Python, implementing Earley & LALR(1) and an easy interface "
 url="https://github.com/lark-parser/lark"
@@ -26,4 +26,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="3f6093d600744e23f32622bc40017873ecd54b44757b761f007606827411964bb38e3b5c0c23373ff0caea2ab73d6ed1c834d5444cedce0cef762c512a1aa669  lark-parser-0.7.8.tar.gz"
+sha512sums="3307593b21de3e70709f3d1f2e2bc2c19fc39d686fe1819a432510fc9f3e4cc4aca6737410b75f1a3829736cb7a97476b5a9202b5d5aa85c7ef01d8100a33cef  lark-parser-0.8.1.tar.gz"
