testing/skim: upgrade to 0.8.0

--- a/testing/skim/APKBUILD
+++ b/testing/skim/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Chloe Kudryavtsev <toast@toastin.space>
 # Maintainer: Chloe Kudryavtsev <toast@toastin.space>
 pkgname=skim
-pkgver=0.7.0
+pkgver=0.8.0
 pkgrel=0
 pkgdesc="Fuzzy finder in rust"
 url="https://github.com/lotabout/skim"
@@ -54,8 +54,7 @@ vim() {
 	pkgdesc="Vim plugin for $pkgname"
 	install_if="$pkgname=$pkgver-r$pkgrel vim"
 
-	mkdir -p "$subpkgdir"/usr/share
-	mv "$pkgdir"/usr/share/vim "$subpkgdir"/usr/share
+	amove usr/share/vim
 }
 
 tmux() {
@@ -63,8 +62,7 @@ tmux() {
 	pkgdesc="tmux launcher for $pkgname"
 	install_if="$pkgname=$pkgver-r$pkgrel tmux"
 
-	mkdir -p "$subpkgdir"/usr/bin
-	mv "$pkgdir"/usr/bin/sk-tmux "$subpkgdir"/usr/bin
+	amove usr/bin/sk-tmux
 }
 
 bash() {
@@ -72,9 +70,7 @@ bash() {
 	pkgdesc="Bash completion for $pkgname"
 	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
 
-	mkdir -p "$subpkgdir"/usr/share/bash-completion/completions
-	mv "$pkgdir"/usr/share/bash-completion/completions/* \
-		"$subpkgdir"/usr/share/bash-completion/completions
+	amove usr/share/bash-completion/completions
 }
 
 zsh() {
@@ -82,9 +78,7 @@ zsh() {
 	pkgdesc="Zsh completion for $pkgname"
 	install_if="$pkgname=$pkgver-r$pkgrel zsh"
 
-	mkdir -p "$subpkgdir"/usr/share/zsh/site-functions
-	mv "$pkgdir"/usr/share/zsh/site-functions/* \
-		"$subpkgdir"/usr/share/zsh/site-functions
+	amove usr/share/zsh/site-functions
 }
 
 bashkey() {
@@ -92,8 +86,7 @@ bashkey() {
 	pkgdesc="Bash key-bindings for $pkgname"
 	install_if="$pkgname=$pkgver-r$pkgrel bash"
 
-	mkdir -p "$subpkgdir"/usr/share/skim
-	mv "$pkgdir"/usr/share/skim/key-bindings.bash "$subpkgdir"/usr/share/skim
+	amove usr/share/skim/key-bindings.bash
 }
 
 fishkey() {
@@ -101,8 +94,7 @@ fishkey() {
 	pkgdesc="Fish key-bindings for $pkgname"
 	install_if="$pkgname=$pkgver-r$pkgrel fish"
 
-	mkdir -p "$subpkgdir"/usr/share/skim
-	mv "$pkgdir"/usr/share/skim/key-bindings.fish "$subpkgdir"/usr/share/skim
+	amove usr/share/skim/key-bindings.fish
 }
 
 zshkey() {
@@ -110,8 +102,7 @@ zshkey() {
 	pkgdesc="Zsh key-bindings for $pkgname"
 	install_if="$pkgname=$pkgver-r$pkgrel zsh"
 
-	mkdir -p "$subpkgdir"/usr/share/skim
-	mv "$pkgdir"/usr/share/skim/key-bindings.zsh "$subpkgdir"/usr/share/skim
+	amove usr/share/skim/key-bindings.zsh
 }
 
-sha512sums="051d25eed1b359e83a031db29b7f4e656097f91f3c6b192f62561870e3c64f91f14a6674d4536c990344a109e6f2a359046b04749a917e9d006a8c8070b72e62  skim-0.7.0.tar.gz"
+sha512sums="5773f39d59356e1878a20e0c333ab2b0e4e7f6eed0746c2cc5efb13d530f858f32b13936d9006b4d8b9723047d865638436b086c58950de76151718b758f28e3  skim-0.8.0.tar.gz"
