--- a/testing/openjfx11/APKBUILD
+++ b/testing/openjfx11/APKBUILD
@@ -6,7 +6,7 @@ _pkgver=${pkgver/_p/+}
 pkgrel=1
 pkgdesc="Open JavaFX 11"
 url="https://hg.openjdk.java.net/openjfx/11-dev/rt"
-arch="x86_64" # fails on aarch64&ppc64le and hangs then
+arch="" # fails on aarch64&ppc64le and hangs then
 # openjdk11 is not yet available on 32 bit arches
 license="GPL-2.0-with-classpath-exception"
 depends="$pkgname-gtk3" # for the virtual openjfx11 package
