--- a/community/graphicsmagick/APKBUILD
+++ b/community/graphicsmagick/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=graphicsmagick
-pkgver=1.3.34
+pkgver=1.3.35
 pkgrel=0
 pkgdesc="Image processing system"
 url="http://www.graphicsmagick.org/"
@@ -10,7 +10,7 @@ license="MIT"
 makedepends="libpng-dev tiff-dev libxml2-dev libwmf-dev freetype-dev libtool libltdl
  libwebp-dev"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://downloads.sourceforge.net/$pkgname/$pkgname/$pkgver/GraphicsMagick-$pkgver.tar.xz"
+source="https://downloads.sourceforge.net/graphicsmagick/graphicsmagick/$pkgver/GraphicsMagick-$pkgver.tar.xz"
 options="libtool !check"
 builddir="$srcdir"/GraphicsMagick-$pkgver
 
@@ -141,4 +141,4 @@ package() {
 	make -j1 DESTDIR="$pkgdir" install
 }
 
-sha512sums="50bfd016badd6a1a336ba8b10fdfdde2d760d6c098d44c80ff95e4df9a811957127ee24d241df6a1f6daff34b8a6b0c0d892f1050c003d651a1bbbecbf28ced8  GraphicsMagick-1.3.34.tar.xz"
+sha512sums="baae92089d52147ef961f93495abc8a9d8b1a963af61d87a650c1ab105d46816aa38c83f654edcb5a0e1b7f07ccc06eaeaa443b9bde3a63a0b9bfb45f3ae144c  GraphicsMagick-1.3.35.tar.xz"
