--- a/main/postgresql/APKBUILD
+++ b/main/postgresql/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=postgresql
 pkgver=12.2
-pkgrel=0
+pkgrel=1
 pkgdesc="A sophisticated object-relational DBMS"
 url="https://www.postgresql.org/"
 arch="all"
@@ -13,9 +13,9 @@ install="$pkgname.pre-install $pkgname.pre-upgrade"
 pkgusers="postgres"
 pkggroups="postgres"
 checkdepends="diffutils"
-depends_dev="openssl-dev"
+depends_dev="clang llvm openssl-dev"
 makedepends="$depends_dev libedit-dev zlib-dev libxml2-dev util-linux-dev
-	openldap-dev tcl-dev perl-dev python3-dev linux-headers llvm-dev clang"
+	openldap-dev tcl-dev perl-dev python3-dev linux-headers llvm-dev"
 subpackages="$pkgname-contrib $pkgname-dev $pkgname-doc libpq $pkgname-libs
 	$pkgname-client $pkgname-pltcl
 	$pkgname-plperl $pkgname-plperl-contrib:plperl_contrib
