--- a/community/postgis/APKBUILD
+++ b/community/postgis/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Bjoern Schilberg <bjoern@intevation.de>
 pkgname=postgis
 pkgver=3.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="PostGIS is a spatial database extender for PostgreSQL object-relational database."
 url="https://postgis.net/"
 arch="all !x86 !armhf !armv7 !s390x" # missing proj-dev on these arch's
 license="GPL-2.0-or-later"
 depends="postgresql perl"
 makedepends="postgresql-dev geos-dev gdal-dev libxml2-dev proj-dev perl-dev
-	json-c-dev pcre-dev protobuf-c-dev"
+	json-c-dev pcre-dev protobuf-c-dev clang-dev llvm9-dev"
 subpackages="$pkgname-doc"
 source="http://download.osgeo.org/postgis/source/postgis-$pkgver.tar.gz"
 options="!check" # tests depends on a running PostgreSQL server
