testing/pg_cron: rename to postgresql-pg_cron
It's a PostgreSQL extension, there's a convention to prefix their
pkgname with postgresql-.

--- a/testing/postgresql-pg_cron/APKBUILD
+++ b/testing/postgresql-pg_cron/APKBUILD
@@ -1,6 +1,7 @@
 # Contributor: G.J.R. Timmer <gjr.timmer@gmail.com>
 # Maintainer: G.J.R. Timmer <gjr.timmer@gmail.com>
-pkgname=pg_cron
+pkgname=postgresql-pg_cron
+_projname=pg_cron
 pkgver=1.2.0
 pkgrel=1
 pkgdesc="Cron-based scheduler for PostgreSQL 9.5+"
@@ -9,8 +10,10 @@ arch="all"
 license="PostgreSQL"
 depends="postgresql"
 makedepends="postgresql-dev"
+provides="pg_cron=$pkgver-r$pkgrel"
 install="$pkgname.post-install"
-source="$pkgname-$pkgver.tar.gz::https://github.com/citusdata/pg_cron/archive/v$pkgver.tar.gz"
+source="https://github.com/citusdata/pg_cron/archive/v$pkgver/$_projname-$pkgver.tar.gz"
+builddir="$srcdir/$_projname-$pkgver"
 options="!check"  # no tests provided
 
 prepare() {
