--- a/community/postgresql-bdr-extension0.9/APKBUILD
+++ b/community/postgresql-bdr-extension0.9/APKBUILD
@@ -8,29 +8,25 @@ arch="all"
 license="GPL"
 makedepends="$depends_dev postgresql-bdr-dev"
 subpackages="$pkgname-doc"
-#FIXME: mkdir: can't create directory 'tmp_check/data': File exists
+# FIXME: mkdir: can't create directory 'tmp_check/data': File exists
 options="!check"
 source="http://packages.2ndquadrant.com/postgresql-bdr94-2ndquadrant/tarballs/bdr-$pkgver.tar.bz2"
-builddir="$srcdir"/bdr-$pkgver
+builddir="$srcdir/bdr-$pkgver"
 
 build() {
-	cd "$builddir"
 	./configure --prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
-		--enable-bdr \
-		|| return 1
-	make || return 1
+		--enable-bdr
+	make
 }
 
 check() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
