main/zsh: upgrade to 5.8

--- a/main/zsh/APKBUILD
+++ b/main/zsh/APKBUILD
@@ -3,12 +3,14 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 #
 # secfixes:
+#   5.8-r0:
+#     - CVE-2019-20044
 #   5.4.2-r1:
 #     - CVE-2018-1083
 #     - CVE-2018-1071
 #
 pkgname=zsh
-pkgver=5.7.1
+pkgver=5.8
 pkgrel=0
 pkgdesc="Very advanced and programmable command interpreter (shell)"
 url="https://www.zsh.org/"
@@ -33,7 +35,6 @@ _comps="android-tools:Unix/_adb
 	graphicsmagick:Unix/_graphicsmagick
 	imagemagick:Unix/_imagemagick
 	lynx:Unix/_lynx
-	mercurial:Unix/_hg
 	rsync:Unix/_rsync
 	subversion:Unix/_subversion
 	tmux:Unix/_tmux
@@ -156,5 +157,5 @@ _submv() {
 	mkdir -p "$subpkgdir"/${path%/*}
 	mv "$pkgdir"/$path "$subpkgdir"/${path%/*}/
 }
-sha512sums="a6aa88e1955a80229a4784a128866e325f79a8b5f73c922ab480048411036f1835cbb31daa30ab38bd16ab2a50040eda8f4f1f64704b21b6acc3051b1dbf18d0  zsh-5.7.1.tar.xz
+sha512sums="96198ecef498b7d7945fecebbe6bf14065fa8c5d81a7662164579eba8206b79575812d292adea1864bc7487ac0818ba900e25f9ab3802449340de80417c2c533  zsh-5.8.tar.xz
 59182b99447872ded8adf0d890e9359ee47fce0b7acb2808f4308f945885fbf6d977a0917bbb5c0f21454caf3ba06ab092127732da4f84292d6ab0989a0110fe  zprofile"
