main/zsh: move postgresql completions to subpackage
And allow to specify name of the reverse dependency for install_if.

--- a/main/zsh/APKBUILD
+++ b/main/zsh/APKBUILD
@@ -27,18 +27,20 @@ _libdir="usr/lib/zsh/$pkgver"
 _sharedir="usr/share/zsh/$pkgver"
 
 # Move some bigger completion files to subpackages.
-_comps="android-tools:Unix/_adb
-	bzr:Unix/_bzr
-	cvs:Unix/_cvs
-	gcc:Unix/_gcc
-	git:Unix/_git
-	graphicsmagick:Unix/_graphicsmagick
-	imagemagick:Unix/_imagemagick
-	lynx:Unix/_lynx
-	rsync:Unix/_rsync
-	subversion:Unix/_subversion
-	tmux:Unix/_tmux
-	zfs:Unix/_zfs*:Unix/_zpool"
+# <pkgname-prefix>:[<revdep>]:<file1>[:<file2>...]
+_comps="android-tools::Unix/_adb
+	bzr::Unix/_bzr
+	cvs::Unix/_cvs
+	gcc::Unix/_gcc
+	git::Unix/_git
+	graphicsmagick::Unix/_graphicsmagick
+	imagemagick::Unix/_imagemagick
+	lynx::Unix/_lynx
+	postgresql:postgresql-client:Unix/_postgresql
+	rsync::Unix/_rsync
+	subversion::Unix/_subversion
+	tmux::Unix/_tmux
+	zfs::Unix/_zfs*:Unix/_zpool"
 for _i in $_comps; do
 	subpackages="$subpackages ${_i%%:*}-zsh-completion:_completion:noarch"
 done
@@ -141,10 +143,14 @@ _completion() {
 	local name="${subpkgname%-zsh-completion}"
 	pkgdesc="Zsh completions for $name"
 	depends="$pkgname"
-	install_if="$pkgname=$pkgver-r$pkgrel $name"
+
+	local revdep="$(printf '%s\n' $_comps \
+		| sed -En "s|^$name:([^:]*):.*|\1|p")"
+
+	install_if="$pkgname=$pkgver-r$pkgrel ${revdep:-$name}"
 
 	local files="$(printf '%s\n' $_comps \
-		| sed -En "s|^$name:(.*)|\1|p" | tr : ' ')"
+		| sed -En "s|^$name:[^:]*:(.*)|\1|p" | tr : ' ')"
 	test -n "$files" || { echo "$name not found in \$_comps" >&2; return 1; }
 
 	local f; for f in $files; do
@@ -157,5 +163,6 @@ _submv() {
 	mkdir -p "$subpkgdir"/${path%/*}
 	mv "$pkgdir"/$path "$subpkgdir"/${path%/*}/
 }
+
 sha512sums="96198ecef498b7d7945fecebbe6bf14065fa8c5d81a7662164579eba8206b79575812d292adea1864bc7487ac0818ba900e25f9ab3802449340de80417c2c533  zsh-5.8.tar.xz
 59182b99447872ded8adf0d890e9359ee47fce0b7acb2808f4308f945885fbf6d977a0917bbb5c0f21454caf3ba06ab092127732da4f84292d6ab0989a0110fe  zprofile"
