main/zsh: move composer completions to subpackage

--- a/main/zsh/APKBUILD
+++ b/main/zsh/APKBUILD
@@ -30,6 +30,7 @@ _sharedir="usr/share/zsh/$pkgver"
 # <pkgname-prefix>:[<revdep>]:<file1>[:<file2>...]
 _comps="android-tools::Unix/_adb
 	bzr::Unix/_bzr
+	composer::Unix/_composer
 	cvs::Unix/_cvs
 	gcc::Unix/_gcc
 	git::Unix/_git
