community/gvm-libs: Fix parse_nvt_timestamp error
Musl-libc's strptime function doesn't support this formatting. This is similar to commit 7f90328d3f882f558e1a22830974308c31fef713

--- a/community/gvm-libs/APKBUILD
+++ b/community/gvm-libs/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=gvm-libs
 pkgver=11.0.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Greenbone Vulnerability Management Libraries"
 url="https://www.openvas.org/"
 arch="all"
@@ -22,7 +22,8 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/greenbone/gvm-libs/archive/v
 	malloc-trim.patch
 	support-gnutls-missing.patch
 	fix-sigsegv-no-plugin_feed_info.inc-file-present.patch
-	glib-include-path.patch"
+	glib-include-path.patch
+	strptime.patch"
 
 prepare() {
 	default_prepare
@@ -67,4 +68,5 @@ sha512sums="ff981b4ca37b425a8d1f491e90bd1cef4701033886f9fd47dad34540b36fa275d4af
 ae93ac7ec929325926d785bb58ed9c09f8bdaf518adf09db54bb9a8a4b5e4474c0ab61fc987c91114f2013cbe39868115006b528865fbd027e5b88eca58f1954  malloc-trim.patch
 dcb83b3ec8a4d21b6097c0eb67e28b3e9abb128b691d143788713fbffd704c132e4fa552fb9fc773e32888a8d5006d56647f28ff7d0b8833e1911a3a94acc4a4  support-gnutls-missing.patch
 4da0ad259926bba976ed634501500bb8a38ac3f2ff873aad1a3de8a86ae29032ec22cb8a494d3144945f6fab49031e228f4262032b007b41b3a123893b86be93  fix-sigsegv-no-plugin_feed_info.inc-file-present.patch
-c0fe0add24cb4336f0ce313197042e60a3aba3eeb983f31b243e665a488e520ffa260ab9a3feb852500310a9df66f2eaf82ac4294d7980b983a78454b30eb9f9  glib-include-path.patch"
+c0fe0add24cb4336f0ce313197042e60a3aba3eeb983f31b243e665a488e520ffa260ab9a3feb852500310a9df66f2eaf82ac4294d7980b983a78454b30eb9f9  glib-include-path.patch
+b10f2b6a8e126a184c65c91bdd18a21e4ee16cbc442775288a11c2768c8e5c1db4ce3749025e7cc3f360c7c1011b79dca836fee742fb9f06034ca0a986f718b5  strptime.patch"
