community/gvmd: Fix for parse_ctime error
Fixes issue with SCAP, CPE, and CVE data not being loaded into the database. Related to commit 8f388675247b7d2f1c133e3923bc8633c2c77988 that has a MR open.

--- a/community/gvmd/APKBUILD
+++ b/community/gvmd/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=gvmd
 pkgver=9.0.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Greenbone Vulnerability Manager"
 url="https://www.openvas.org/"
 arch="all"
@@ -30,7 +30,8 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/greenbone/gvmd/archive/v$pkg
 	fix-alpine-sql-syntax.patch
 	sys-siglist.patch
 	fix-gvm-port-update-name-and-backend.patch
-	lockfile.patch"
+	lockfile.patch
+	strptime.patch"
 
 prepare() {
 	default_prepare
@@ -98,4 +99,5 @@ b5411a618e62e5a64fae3441d7f8a4db1fb7675200d8ce5f8208b09c6459b33920f3a65519c8d177
 5b7645912e107f67e1cc64cdb817404bc5212c41328201cfcc048a3ee73cf3c135b5128f1da6e84946ddc9361751b3da92518e493d940c2bbbda0c8ada8f3d5f  fix-alpine-sql-syntax.patch
 682ae0efb02c565ed28d67c3adc5d181fb0ac43d670573f0d9587cb6ff9d4dd89eaf1f43f0fab3928e447bee735958afec0f31c70f5ceffac3c68633469ff71a  sys-siglist.patch
 981c4cb32e5ef46be97b0c2d3cb24ab8b49226212104eb56c49216d976a5ae3cda3518e7629c0417dd22c94cf2fe19c34b6a5d4efd291c06747db84e7be76596  fix-gvm-port-update-name-and-backend.patch
-ef23f5bb64371f4e11eae0830a0c7a6a6463b792b2907cbc0527b1cf5a273927f676a254634ee3228315b44b6ca56716d3dce122dd43937fed79f2a443ae2d3d  lockfile.patch"
+ef23f5bb64371f4e11eae0830a0c7a6a6463b792b2907cbc0527b1cf5a273927f676a254634ee3228315b44b6ca56716d3dce122dd43937fed79f2a443ae2d3d  lockfile.patch
+e9c2717eacf852e6a08050245eff79cf917875c6e403bc1558c3dd02239fb07ad7d3ccd18978ce1b80f035077124c7d6049c75a587bd9609869861bdeb6aaba1  strptime.patch"
