community/elogind: use openrc controller, add openrc service

--- a/community/elogind/APKBUILD
+++ b/community/elogind/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=elogind
 pkgver=243.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Standalone fork of systemd's elogind"
 url="https://github.com/elogind/elogind"
 arch="all"
@@ -32,10 +32,14 @@ subpackages="
 	$pkgname-dev
 	$pkgname-doc
 	$pkgname-lang
+	$pkgname-openrc
 	lib$pkgname:libs
 	$pkgname-zsh-completion:zshcomp:noarch
-	$pkgname-bash-completion:bashcomp:noarch"
-source="$pkgname-$pkgver.tar.gz::https://github.com/elogind/elogind/archive/v$pkgver.tar.gz"
+	$pkgname-bash-completion:bashcomp:noarch
+	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/elogind/elogind/archive/v$pkgver.tar.gz
+	elogind.initd
+	"
 
 build() {
 	[ "$CARCH" == "s390x" ] && export CFLAGS="$CFLAGS -D__IGNORE_pkey_mprotect -DSO_PEERSEC=31"
@@ -44,7 +48,7 @@ build() {
 		--libdir=/usr/lib \
 		--libexecdir=/usr/libexec \
 		-Dprefix=/usr \
-		-Dcgroup-controller=elogind \
+		-Dcgroup-controller=openrc \
 		-Dhalt-path=/sbin/halt \
 		-Drootlibexecdir=/usr/libexec/elogind \
 		-Dreboot-path=/sbin/reboot \
@@ -70,6 +74,9 @@ package() {
 	# Install headers from elogind
 	install -Dm644 src/systemd/sd-id128.h usr/include/sd-id128.h
 	install -Dm644 src/systemd/_sd-common.h usr/include/_sd-common.h
+
+	# Install openrc service
+	install -Dm755 "$srcdir"/elogind.initd "$pkgdir"/etc/init.d/elogind
 }
 
 zshcomp() {
@@ -88,4 +95,5 @@ bashcomp() {
 	mv "$pkgdir"/usr/share/bash-completion "$subpkgdir"/usr/share
 }
 
-sha512sums="9751a3d0ed65dd73d9363097ee1752d437d5636db2a4137395596e0c81e04d4715f314568d1d7c6f367f1ecbda011086cb165bd4dc207302626b16e693cd0a02  elogind-243.4.tar.gz"
+sha512sums="9751a3d0ed65dd73d9363097ee1752d437d5636db2a4137395596e0c81e04d4715f314568d1d7c6f367f1ecbda011086cb165bd4dc207302626b16e693cd0a02  elogind-243.4.tar.gz
+3036d26233a3349c3f89d415b30b6ebdd12ee4fe49b2376c689ea855bcb602222ccb1944676b5d981ea7eb4bafee71b1fb984ca80e263672c2ac3f0b7be99fca  elogind.initd"
