--- a/main/polkit/APKBUILD
+++ b/main/polkit/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=polkit
 pkgver=0.116
-pkgrel=0
+pkgrel=1
 pkgdesc="Application development toolkit for controlling system-wide privileges"
 url="https://www.freedesktop.org/wiki/Software/polkit/"
 arch="all"
@@ -15,19 +15,19 @@ makedepends="$depends_dev expat-dev glib-dev gtk-doc gobject-introspection-dev
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 source="https://www.freedesktop.org/software/polkit/releases/polkit-$pkgver.tar.gz
 	make-innetgr-optional.patch
-	alpine-polkit.pam"
+	alpine-polkit.pam
+	polkit.initd
+	"
 install="polkit.pre-install polkit.pre-upgrade"
 pkgusers="polkitd"
 pkggroups="polkitd"
 
 prepare() {
-	cd "$builddir"
 	default_prepare
 	autoreconf -fi
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -52,12 +52,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	# Set SHELL as a workaround for #10081
 	make SHELL=/bin/bash DESTDIR="$pkgdir" install
 
@@ -69,8 +67,11 @@ package() {
 	chmod -R 700 "$pkgdir"/etc/polkit-1/rules.d "$pkgdir"/usr/share/polkit-1/rules.d
 	chmod 4755 "$pkgdir"/usr/lib/polkit-1/polkit-agent-helper-1
 	chmod 4755 "$pkgdir"/usr/bin/pkexec
+
+	install -Dm755 "$srcdir"/polkit.initd "$pkgdir"/etc/init.d/polkit
 }
 
 sha512sums="b66b01cc2bb4349de70147f41f161f0f6f41e7230b581dfb054058b48969ec57041ab05b51787c749ccfc36aa5f317952d7e7ba337b4f6f6c0a923ed5866c2d5  polkit-0.116.tar.gz
 05a4fa21a42237a68d40f581d70a84937ba94f703e5342f37a59cca171ed5446acf7ae83fd5b05a3a92600ad38ad74d0c735a20f1b932750f91c0988ba900f60  make-innetgr-optional.patch
-f5102dc00d390b3a3c957b62e1712db778c7ffb7378f3d8e816c0757c11a308c5d5303e42595b0d6add9839247c773880cd34e56afacc89eb6efaadf9aae7826  alpine-polkit.pam"
+f5102dc00d390b3a3c957b62e1712db778c7ffb7378f3d8e816c0757c11a308c5d5303e42595b0d6add9839247c773880cd34e56afacc89eb6efaadf9aae7826  alpine-polkit.pam
+f6e5ac0ed41feb392dfd104979ec577c5936f3db2bd252b12b7b9b2609a0901dae38bebec1ea65ccf4f427860b520383ae4d2c66fb74ab986c715f6b0ad50473  polkit.initd"
