testing/peek: upgrade to 1.5.1

--- a/testing/peek/APKBUILD
+++ b/testing/peek/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=peek
-pkgver=1.5.0
-pkgrel=1
+pkgver=1.5.1
+pkgrel=0
 pkgdesc="Simple animated GIF screen recorder with an easy to use interface"
 url="https://github.com/phw/peek"
 arch="all"
@@ -11,7 +11,7 @@ depends="ffmpeg gst-plugins-good gst-plugins-bad"
 makedepends="meson gtk+3.0-dev gettext-dev vala txt2man keybinder3-dev"
 checkdepends="appstream-glib desktop-file-utils"
 subpackages="$pkgname-lang $pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/phw/peek/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/phw/peek/archive/$pkgver.tar.gz"
 
 build() {
 	meson \
@@ -33,4 +33,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="f4df743e8dd6e469d8bae53c8e4fdf225e6e430959e5cad1c9f3de03d385c4a00febd2c25e64afa18b5b522abb1d8915d42734c2db65118064e0d5afba96c36d  peek-1.5.0.tar.gz"
+sha512sums="dc25f24b1f5954ff26f399f86bf0a2a9b90c4d63c9cd33fcd44f16e447d23070c04e760c57bdc8a946e699c3038b8ee7afc44ce6daa7030e2f9e6f071be6eae4  peek-1.5.1.tar.gz"
