community/cgmanager: fix license=, transition to supervise-daemon

--- a/community/cgmanager/APKBUILD
+++ b/community/cgmanager/APKBUILD
@@ -2,12 +2,11 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=cgmanager
 pkgver=0.42
-pkgrel=0
+pkgrel=1
 pkgdesc="nother daemon for managing control groups"
 url="https://linuxcontainers.org/cgmanager/"
 arch="all"
-license="GPL"
-depends=""
+license="LGPL-2.0-or-later"
 depends_dev="linux-pam-dev"
 makedepends="$depends_dev linux-headers libnih-dev popt-dev"
 subpackages="$pkgname-dev $pkgname-openrc"
@@ -15,10 +14,8 @@ source="https://linuxcontainers.org/downloads/cgmanager/cgmanager-$pkgver.tar.gz
 	cgmanager.initd
 	cgproxy.initd"
 
-builddir="$srcdir"/cgmanager-$pkgver
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -27,25 +24,21 @@ build() {
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
 		--localstatedir=/var \
-		--with-distro=gentoo
+		--with-distro=gentoo \
+		--disable-static
 	make
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
-	rm -f "$pkgdir"/usr/lib/*.la
-	install -Dm755 "$srcdir"/cgmanager.initd \
-		"$pkgdir"/etc/init.d/cgmanager
-	install -Dm755 "$srcdir"/cgproxy.initd \
-		"$pkgdir"/etc/init.d/cgproxy
+	install -Dm755 "$srcdir"/cgmanager.initd "$pkgdir"/etc/init.d/cgmanager
+	install -Dm755 "$srcdir"/cgproxy.initd "$pkgdir"/etc/init.d/cgproxy
 }
 
 sha512sums="d92113a6748084f1c0708f75c8bdf5de484d534bf00f664a5288902be887c2a1c7cf3d91afaab3331f0d573a86fbc6edb2fa1d37c070250cf53e0621213d7d74  cgmanager-0.42.tar.gz
-0bdfbed2fb5d79939ccb9b8554060c16c05e8e44503ecf1b6f4a38c7a39f765df34cdaa5cc0aa6d9ba5d17d3ecb7ee9f0623c363d99041bcbccd2ba410282a66  cgmanager.initd
-b43439d9086fe50a8de93a61167272474e9e9b7a71b5a93bf3c6d2da127f95be3294c713295ca51c68e6de1f95c4d969502d8c3d503bc510873ccec794bef5ba  cgproxy.initd"
+56aa4a19fb1f9c616fb753509b005b54593dff4033c19f0538478db8a504574d94bc93d3d8bdaf764f53a47214bc75ef66c954345339a28b3166201eb9321ae4  cgmanager.initd
+11566556f4a464bb07bec71e27b0ad21cbbfec9fc2fae183c6b1eda76014e67c3065b8c0d4e54d098c781994960c72e9f8cfc1d6bbd66943a235c75560cd75f7  cgproxy.initd"
