testing/partitionmanager: upgrade to 4.1.0

--- a/testing/partitionmanager/APKBUILD
+++ b/testing/partitionmanager/APKBUILD
@@ -1,30 +1,31 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=partitionmanager
-pkgver=4.0.0
-pkgrel=1
+pkgver=4.1.0
+pkgrel=0
 arch="all !armhf"
 url="https://kde.org/applications/system/org.kde.partitionmanager"
 pkgdesc="A KDE utility that allows you to manage disks, partitions, and file systems"
 license="GPL-3.0-or-later"
 makedepends="extra-cmake-modules qt5-qtbase-dev kconfig-dev kconfigwidgets-dev kcoreaddons-dev kcrash-dev kdbusaddons-dev ki18n-dev kiconthemes-dev kjobwidgets-dev kio-dev kwidgetsaddons-dev kxmlgui-dev kdoctools-dev kpmcore-dev"
-source="https://download.kde.org/stable/$pkgname/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/partitionmanager/$pkgver/src/partitionmanager-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="dbdae666b29996a7ef463159cd96469cf5081ca9027d1d59556e21556e2488485c0d4bee1e9005a446a47b13e3c1e4b71014f58c7bfa830adfd7c39364f4581a  partitionmanager-4.0.0.tar.xz"
+sha512sums="63f77c68f0468e6b17da33bf52824e2858b43f33cb46f8ff7069386d56a154c86f5f3ec20113c472d567a790ba0d8593c2ecb44d9c0d4e1614dcdc570b072761  partitionmanager-4.1.0.tar.xz"
